ingress/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: NodePort
  selector:
    app: nginx-ingress-controller
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
