ingress/ingress-db.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-ingress
  namespace: testapp
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    alb.ingress.kubernetes.io/group.name: test-alb  #mandatory to bind all the ingress resources to single alb
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    #- host: uat.deqodeingress.in
  - http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: mongoexpress-svc
            port:
              number: 80
